--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "website made with socket.io",
   "main": "main.js",
   "dependencies": {
+    "clipboard": "^2.0.4",
     "express": "^4.16.3",
     "paper": "^0.11.5",
     "socket.io": "^2.1.1"
